# sdkmesh-to-obj

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
Source/: OBJWriter.cpp  OBJWriter.h  SDKMesh.cpp  SDKMesh.h  main.cpp
